--- a/src/about.html
+++ b/src/about.html
@@ -1,25 +1,13 @@
 ---
 layout: default
-title: about
+title: about me | mrp
 path: about
 ---
 
-<div class="container mt-auto lg:h-80 flex flex-col justify-center items-center">
- 
-  <div class="mt-5">
-    <h1>
-      About
-    </h1>
-  
-    
-  
-  </div>
 
-  
-</div>
 
 <section class="flex w-full justify-between mt-10 p-2 md:p-8 overflow-hidden ">
-  <article class=" w-full grid   sm:grid-cols-2 md:grid-cols-3 gap-4 mr-4 ">
-  ABout
+  <article class=" w-full ">
+    I have been programming for over 2 years now with JavaScript technogies. I love giving back to the community through my articles.
   
 </section>
