--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ path: home
 <div class="container mt-auto lg:h-80 flex flex-col justify-center items-center">
  
   <div class="mt-5">
-    <h1>
+    <h1 class="p-2">
       Welcome to
       <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
        MrP blog
@@ -15,7 +15,7 @@ path: home
     </h1>
   
     <p class="text-center">
-      I write about JavaScript technologies
+      I write about responsive design and JavaScript technologies
     </p>
   
   </div>
